force-app/main/default/objects/Lead/fields/BDM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>BDM_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a BDM was assigned as the owner of this lead when it was created. Hidden for use by Assignment Rule logic only and set by apex code.</description>
    <label>BDM Assigned</label>
    <type>Checkbox</type>
</CustomField>