force-app/main/default/objects/Lead/fields/Biomed_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Biomed_Account_Manager__c</fullName>
    <formula>Collections_Territory__r.Biomed_Account_Manager__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biomed Account Manager</label>
    <type>Text</type>
</CustomField>