force-app/main/default/objects/Lead/fields/Blood_Drive_Source__c.field-meta.xml
<CustomField>
    <fullName>Blood_Drive_Source__c</fullName>
    <defaultValue>&#39;BSFApplication&#39;</defaultValue>
    <label>Blood Drive Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSFApplication</fullName>
                <default>true</default>
                <label>BSFApplication</label>
            </value>
            <value>
                <fullName>BSFStandard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>