force-app/main/default/objects/Lead/fields/Blood_Region__c.field-meta.xml
<CustomField>
    <fullName>Blood_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blood Region</label>
    <referenceTo>Chapter__c</referenceTo>
    <relationshipLabel>Leads (Blood Region)</relationshipLabel>
    <relationshipName>Blood_Region_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>