force-app/main/default/objects/Lead/fields/Campaign_Delivery_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Delivery_ID__c</fullName>
    <description>The Delivery Id for the email campaign.</description>
    <inlineHelpText>The Delivery Id for the email campaign.</inlineHelpText>
    <label>Campaign Delivery ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>