force-app/main/default/objects/Lead/fields/Campaign_Subject__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Subject__c</fullName>
    <description>Subject Line</description>
    <inlineHelpText>Subject Line</inlineHelpText>
    <label>Campaign Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>