force-app/main/default/objects/Lead/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chapter</label>
    <referenceTo>Chapter__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>