force-app/main/default/objects/Lead/fields/Collections_Territory__c.field-meta.xml
<CustomField>
    <fullName>Collections_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collections Territory</label>
    <referenceTo>Collections_Territory__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>