force-app/main/default/objects/Lead/fields/Company_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Sub_Type__c</fullName>
    <description>This is for Biomed Sponsor Sales and is completed by the WebForm</description>
    <label>Company Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alumni Greek System</fullName>
            </value>
            <value>
                <fullName>Assisted Living/Long-Term Care</fullName>
            </value>
            <value>
                <fullName>Civic Group (i.e - Elks Lodge, Rotary Club, Chamber of Commerce)</fullName>
            </value>
            <value>
                <fullName>Community College</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>Government Agency</fullName>
            </value>
            <value>
                <fullName>Health and Safety (Fire, Police &amp; EMS)</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Hospital Group</fullName>
            </value>
            <value>
                <fullName>Local business</fullName>
            </value>
            <value>
                <fullName>Local Community (i.e. - Boys and Girl Scout, Local Township, Fraternal Order of Police, etc.)</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Medical Clinic/Office</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>Military Installation (Army,Marines, Navy, Air Force, Reserve, National Guard)</fullName>
            </value>
            <value>
                <fullName>NGO (Non-Governmental Organization)</fullName>
            </value>
            <value>
                <fullName>Pre-School/Daycare</fullName>
            </value>
            <value>
                <fullName>Print Media</fullName>
            </value>
            <value>
                <fullName>Private School (K-12)</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Traditional College/University</fullName>
            </value>
            <value>
                <fullName>University Greek System</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Assited Living/Long-Term Care</fullName>
                <isActive>false</isActive>
                <label>Assited Living/Long-Term Care</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>