force-app/main/default/objects/Lead/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Church/Faith-Based Group</fullName>
            </value>
            <value>
                <fullName>Civic/Community</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Media Outlet</fullName>
            </value>
            <value>
                <fullName>Military/Government/NGO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Amusement/Recreational</fullName>
                <isActive>false</isActive>
                <label>Amusement/Recreational</label>
            </value>
            <value>
                <fullName>Corporate/Business/Retail Business/Manufacturing</fullName>
                <isActive>false</isActive>
                <label>Corporate/Business/Retail Business/Manufacturing</label>
            </value>
            <value>
                <fullName>Education, University Greek System</fullName>
                <isActive>false</isActive>
                <label>Education, University Greek System</label>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
            <value>
                <fullName>Hospital, Medical, Health and Wellness</fullName>
                <isActive>false</isActive>
                <label>Hospital, Medical, Health and Wellness</label>
            </value>
            <value>
                <fullName>Media</fullName>
                <isActive>false</isActive>
                <label>Media</label>
            </value>
            <value>
                <fullName>Membership/Community Organization/Alumni Greek System</fullName>
                <isActive>false</isActive>
                <label>Membership/Community Organization/Alumni Greek System</label>
            </value>
            <value>
                <fullName>Military</fullName>
                <isActive>false</isActive>
                <label>Military</label>
            </value>
            <value>
                <fullName>Religious</fullName>
                <isActive>false</isActive>
                <label>Religious</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>