force-app/main/default/objects/Lead/fields/CONTACTED_Status_Agr_Days__c.field-meta.xml
<CustomField>
    <fullName>CONTACTED_Status_Agr_Days__c</fullName>
    <inlineHelpText>The duration between statuses is measured in Days.</inlineHelpText>
    <label>CONTACTED Status Agr Days</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>