force-app/main/default/objects/Lead/fields/Current_Blood_Donor__c.field-meta.xml
<CustomField>
    <fullName>Current_Blood_Donor__c</fullName>
    <label>Current Blood Donor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>