force-app/main/default/objects/Lead/fields/External_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Campaign_ID__c</fullName>
    <label>External Campaign ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>