force-app/main/default/objects/Lead/fields/Hosted_Before_Comments__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Before_Comments__c</fullName>
    <description>Part of HRP-12459</description>
    <label>Hosted Before Comments</label>
    <length>34768</length>
    <type>LongTextArea</type>
</CustomField>