force-app/main/default/objects/Lead/fields/HS_Division__c.field-meta.xml
<CustomField>
    <fullName>HS_Division__c</fullName>
    <formula>Collections_Territory__r.Donor_Services_Division__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS Division</label>
    <type>Text</type>
</CustomField>