force-app/main/default/objects/Lead/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <description>This field is exactly the same as the field of the same name on the Account object. When the lead is converted, this field will be mapped to that corresponding Account field. Only being utilized for Biomed Recruitment lead record type.</description>
    <label>Industry Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fair (State, County)</fullName>
            </value>
            <value>
                <fullName>Health Club</fullName>
            </value>
            <value>
                <fullName>Museums</fullName>
            </value>
            <value>
                <fullName>Sports Club</fullName>
            </value>
            <value>
                <fullName>Sports Team</fullName>
            </value>
            <value>
                <fullName>Advertising / Marketing</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Airline / Airport</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>General Services</fullName>
            </value>
            <value>
                <fullName>Hotel / Resort</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Not For Profit</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Retail / Sales / Service</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utility Company</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>American Legion</fullName>
            </value>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Business Membership Organization</fullName>
            </value>
            <value>
                <fullName>Civitan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>