force-app/main/default/objects/Lead/fields/Interest_Survey_Complete__c.field-meta.xml
<CustomField>
    <fullName>Interest_Survey_Complete__c</fullName>
    <formula>NOT(ISNULL(Interest_Survey_Completed_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Survey Complete</label>
    <type>Checkbox</type>
</CustomField>