force-app/main/default/objects/Lead/fields/Lead_Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Collection_Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biomed Collection Op (Center)</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>