force-app/main/default/objects/Lead/fields/Lead_Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converted_Date__c</fullName>
    <description>Capture date/time of lead conversion</description>
    <label>Lead Converted Date</label>
    <type>DateTime</type>
</CustomField>