force-app/main/default/objects/Lead/fields/Lead_Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Division_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sked_Territory__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Division</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sked_Territory__c</referenceTo>
    <relationshipLabel>Leads (Division)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>