force-app/main/default/objects/Lead/fields/Lead_stage_status_POC__c.field-meta.xml
<CustomField>
    <fullName>Lead_stage_status_POC__c</fullName>
    <label>Lead stage status POC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>