force-app/main/default/objects/Lead/fields/Lead_Stage_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage_Status_Updated__c</fullName>
    <formula>IF(ISPICKVAL(Status, &#39;Contacted&#39;),IF(TODAY()-Last_Modified_Date_Status__c-No_of_Weekend_Days_Btw_Status_Change__c &lt;= 5,IMAGE(&quot;/resource/sked_HLT_Dist/images/Green.png&quot;, &quot;Green&quot;, 25, 92), IF(TODAY()-Last_Modified_Date_Status__c-No_of_Weekend_Days_Btw_Status_Change__c == 6,IMAGE(&quot;/resource/sked_HLT_Dist/images/Amber.png&quot;, &quot;Amber&quot;, 25, 92),IMAGE(&quot;/resource/sked_HLT_Dist/images/Red.png&quot;, &quot;Red&quot;, 25, 92)))
,IF(ISPICKVAL(Status, &#39;Qualified&#39;),IF(TODAY()-Last_Modified_Date_Status__c-No_of_Weekend_Days_Btw_Status_Change__c &lt;= 28,IMAGE(&quot;/resource/sked_HLT_Dist/images/Green.png&quot;, &quot;Green&quot;, 25, 92), IF(TODAY()-Last_Modified_Date_Status__c-No_of_Weekend_Days_Btw_Status_Change__c == 29,IMAGE(&quot;/resource/sked_HLT_Dist/images/Amber.png&quot;, &quot;Amber&quot;, 25, 92),IMAGE(&quot;/resource/sked_HLT_Dist/images/Red.png&quot;, &quot;Red&quot;, 25, 92)))
,IF( NOT(ISPICKVAL(Status, &#39;New&#39;)),IMAGE(&quot;/resource/Grey&quot;,&quot;Grey&quot;,25,92),IMAGE(&quot;/resource/sked_HLT_Dist/images/Green.png&quot;,&quot;Green&quot;, 25, 92)))
)</formula>
    <label>Lead Stage Status Updated</label>
    <type>Text</type>
</CustomField>