force-app/main/default/objects/Lead/fields/Lead_Status_CONTACTED__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_CONTACTED__c</fullName>
    <label>Lead Status CONTACTED</label>
    <type>DateTime</type>
</CustomField>