force-app/main/default/objects/Lead/fields/Lead_Status_NEW__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_NEW__c</fullName>
    <label>Lead Status NEW</label>
    <type>DateTime</type>
</CustomField>