force-app/main/default/objects/Lead/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <description>The reason the Lead has been lost/disqualified.</description>
    <inlineHelpText>Please select a reason why a lead is Unqualified.</inlineHelpText>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor Lost Interest</fullName>
            </value>
            <value>
                <fullName>Unsuitable Site Location</fullName>
            </value>
            <value>
                <fullName>Resource Issues</fullName>
            </value>
            <value>
                <fullName>Insufficient Donor Base</fullName>
            </value>
            <value>
                <fullName>Inadequate Contact Information/No Response</fullName>
            </value>
            <value>
                <fullName>Lost to Competition</fullName>
            </value>
            <value>
                <fullName>Already an existing sponsor/existing sponsor inquiry</fullName>
                <label>Already an Existing Sponsor/Existing Sponsor Inquiry</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead Entry</fullName>
            </value>
            <value>
                <fullName>Competing drive(s) in area</fullName>
                <isActive>false</isActive>
                <label>Competing drive(s) in area</label>
            </value>
            <value>
                <fullName>Length of time since inquiry</fullName>
                <isActive>false</isActive>
                <label>Length of time since inquiry</label>
            </value>
            <value>
                <fullName>Lost interest</fullName>
                <isActive>false</isActive>
                <label>Lost interest</label>
            </value>
            <value>
                <fullName>Poor site selection</fullName>
                <isActive>false</isActive>
                <label>Poor site selection</label>
            </value>
            <value>
                <fullName>Site Survey Inadequate</fullName>
                <isActive>false</isActive>
                <label>Site Survey Inadequate</label>
            </value>
            <value>
                <fullName>Site/resource issues</fullName>
                <isActive>false</isActive>
                <label>Site/resource issues</label>
            </value>
            <value>
                <fullName>Sponsor not prepared</fullName>
                <isActive>false</isActive>
                <label>Sponsor not prepared</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>