force-app/main/default/objects/Lead/fields/Lost_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Other__c</fullName>
    <description>Short &quot;Other&quot; response why lead was lost/disqualified.</description>
    <inlineHelpText>Please provide more details if &quot;Other&quot; was selected for Lost Reason.</inlineHelpText>
    <label>Lost Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>