force-app/main/default/objects/Lead/fields/New_to_Converted_Status__c.field-meta.xml
<CustomField>
    <fullName>New_to_Converted_Status__c</fullName>
    <formula>lead_Status_CONVERTED__c - CreatedDate</formula>
    <inlineHelpText>The duration between statuses is measured in Days.</inlineHelpText>
    <label>New to Converted Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>