force-app/main/default/objects/Lead/fields/New_to_Qualified_Status__c.field-meta.xml
<CustomField>
    <fullName>New_to_Qualified_Status__c</fullName>
    <formula>Lead_Status_qualified__c   -   CreatedDate</formula>
    <inlineHelpText>The duration between statuses is measured in Days.</inlineHelpText>
    <label>New to Qualified Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>