force-app/main/default/objects/Lead/fields/Old_Records__c.field-meta.xml
<CustomField>
    <fullName>Old_Records__c</fullName>
    <formula>CreatedDate &lt; DATETIMEVALUE(&quot;2023-12-11 00:00:00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Records</label>
    <type>Checkbox</type>
</CustomField>