force-app/main/default/objects/Lead/fields/Other_Redcross_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Other_Redcross_Relationships__c</fullName>
    <description>Does the lead / organization have any other relationships with other Red Cross lines?</description>
    <inlineHelpText>Does the lead / organization have any other relationships with other Red Cross lines?</inlineHelpText>
    <label>Other Red Cross Relationships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disaster Services</fullName>
            </value>
            <value>
                <fullName>Service to Armed Forces</fullName>
            </value>
            <value>
                <fullName>Health and Safety</fullName>
            </value>
            <value>
                <fullName>Financial Donor</fullName>
            </value>
            <value>
                <fullName>Blood Donor</fullName>
            </value>
            <value>
                <fullName>Volunteer Services</fullName>
            </value>
            <value>
                <fullName>No Other Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>