force-app/main/default/objects/Lead/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>