force-app/main/default/objects/Lead/fields/Rating_Visual__c.field-meta.xml
<CustomField>
    <fullName>Rating_Visual__c</fullName>
    <formula>IMAGE( 
  CASE(  FLOOR(leadScoring__Lead_Score__c/10), 
    10, &quot;/img/samples/stars_500.gif&quot;,
    9, &quot;/img/samples/stars_500.gif&quot;,
    8, &quot;/img/samples/stars_400.gif&quot;,
    7, &quot;/img/samples/stars_400.gif&quot;,
    6, &quot;/img/samples/stars_300.gif&quot;,
    5, &quot;/img/samples/stars_300.gif&quot;, 
    4, &quot;/img/samples/stars_200.gif&quot;, 
    3, &quot;/img/samples/stars_200.gif&quot;, 
    2, &quot;/img/samples/stars_100.gif&quot;,
    1, &quot;/img/samples/stars_100.gif&quot;, 
    &quot;/img/samples/stars_000.gif&quot;
   ),
&quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Stars</label>
    <type>Text</type>
</CustomField>